Fixed css for booking table overflow

--- a/rg/prenotazioni/browser/resources/rg-reservation.css
+++ b/rg/prenotazioni/browser/resources/rg-reservation.css
@@ -74,6 +74,9 @@ td.selected {
 #week-table-wrapper * {
   box-sizing: border-box;
 }
+#week-table-wrapper {
+  overflow: auto;
+}
 table#week {
   margin: auto;
   width: 100%;
